syntax = "proto3";

package task;

import "google/protobuf/timestamp.proto";

service TaskService {
    rpc CreateTask(CreateTaskRequest) returns (TaskResponse);
    rpc GetTask(GetTaskRequest) returns (TaskResponse);
    rpc UpdateTask(UpdateTaskRequest) returns (TaskResponse);
    rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
    rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
}

message Task {
    string id = 1;
    string title = 2;
    string description = 3;
    bool completed = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message CreateTaskRequest {
    string title = 1;
    string description = 2;
}

message GetTaskRequest {
    string id = 1;
}

message UpdateTaskRequest {
    string id = 1;
    optional string title = 2;
    optional string description = 3;
    optional bool completed = 4;
}

message TaskResponse {
    Task task = 1;
}

message DeleteTaskRequest {
    string id = 1;
}

message DeleteTaskResponse {
    bool success = 1;
}

message ListTasksRequest {
}

message ListTasksResponse {
    repeated Task tasks = 1;
}

